


syntax = "proto3";
option go_package = ".;pb";
package techschool.pcbook;

import "proto/laptop.proto";
import "proto/filter.proto";

//Create Laptop Request and Response

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

//Search Specific Laptop Requset and Response

message SearchLaptopRequest {
    Filter filter = 1;
    string user_name = 2;
}

message SearchLaptopResponse{
    Laptop laptop = 1;
}

message UploadImageRequest {
    oneof data {
        ImageInfo image_info = 1;
        bytes chunk = 2;
    }    
}

message UploadImageResponse{
    string id = 1;
    uint32 size = 2;

}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){};
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse){};
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse){};
}


message ImageInfo {
    string laptop_id = 1;
    string image_type = 2;
    uint32 image_size = 3;
    string user_name = 4;
}